--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 
+{% for message in get_flashed_messages() %}
+    <p>{{ message }}</p>
+{% endfor %}
+
+
+<p><a href="/">Accueil</a></p>
+
 {% block body %}
 
 {% endblock %}
